<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0EFF5"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/header_permission"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_permission"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="start"
                android:lineSpacingExtra="28.6dp"
                android:paddingTop="8dp"
                android:text="@string/title_permission"
                android:textColor="#1E252B"
                android:textSize="21sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_go"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:text="@string/go"
                android:fontFamily="@font/manrope_bold"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <ImageView
            android:id="@+id/image_permission"
            android:layout_width="214dp"
            android:layout_height="170.24dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/ic_permission" />

        <TextView
            android:id="@+id/description_perssion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6.76dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:text="@string/content_permission"
            android:textColor="#4F4F4F"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/switch_bar_corner"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_storage"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/storage_permission"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/bg_thumb"
                app:track="@drawable/bg_track" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/switch_bar_corner"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_camera"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/location_permission"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/bg_thumb"
                app:track="@drawable/bg_track" />
        </LinearLayout>

    </LinearLayout>
</layout>