<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0EFF5">

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_toolbar_multi"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back_to_home"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:src="@drawable/ic_back" />

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:src="@drawable/ic_back"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="22dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/explore"
                android:textColor="@color/button_color_enable"
                android:textSize="20sp"
                android:textStyle="bold" />
        </FrameLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/frameLayout2"
            android:paddingTop="@dimen/_28sdp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="24dp"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:id="@+id/bmi_calculator"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_explore">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_marginBottom="16dp"
                            android:src="@drawable/ic_bmi" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/app_font_bold"
                            android:text="@string/bmi_calculator"
                            android:textColor="#696FDF"
                            android:textSize="14sp" />
                    </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/challenges"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_explore">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_marginBottom="16dp"
                            android:src="@drawable/ic_challenges" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/app_font_bold"
                            android:text="@string/challenges"
                            android:textColor="#696FDF"
                            android:textSize="14sp" />
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingHorizontal="24dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <FrameLayout
                    android:id="@+id/records"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_explore"
                    android:paddingHorizontal="12dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_marginBottom="16dp"
                            android:src="@drawable/ic_record" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/app_font_bold"
                            android:text="@string/records"
                            android:textColor="#696FDF"
                            android:textSize="14sp" />
                    </LinearLayout>
                </FrameLayout>


                <FrameLayout
                    android:id="@+id/overall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible"
                    android:background="@drawable/bg_explore"
                    android:paddingHorizontal="12dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_marginBottom="16dp"
                            android:src="@drawable/ic_overall" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/app_font_bold"
                            android:text="@string/overall"
                            android:textColor="#696FDF"
                            android:textSize="14sp" />
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:visibility="gone"
            android:id="@+id/progress"
            layout="@layout/layout_progress_bar"
            android:layout_below="@id/frameLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>


</layout>
